--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Note that there is a lot of interest for this apartment so I will have to filter
   <li><strong>Other details</strong>: Building was painted recently. There is parking in the backyard. Never had a problem from neighbours. I am giving this up only because I am moving out of the country.</li>
   <li><strong>Viewings</strong>: 26-31 April.</li>
   <li><strong>Note</strong>: Personal items in the picture are not included.
-For more info, please DM me or write an email to sreeram.com@gmail.com or message me in insta <a href='https://instagram.com/sreeramofficial'>@sreeramofficial</a></li>
+For more info, please DM me or write an email to <a href='mailto:sreeram.com@gmail.com'>sreeram.com@gmail.com</a> or message me in insta <a href='https://instagram.com/sreeramofficial'>@sreeramofficial</a></li>
 </ul>
 
 <p><img src="https://lh3.googleusercontent.com/dVAeCgefI6hnereYMU0wLw4e_5uCqrqV1a06ME9Q7UfcyadTKiqf7hAK5ofA-XenzU-WJ4a6Tg6cymE_btRiYdwrv53H6ZIYIWbE3aMT_RHDJk3DKFZUo9PJFwS-ZDKjlkwBDCbsDSNvAtiYbFKSAJ4rWQuRaPnDTT00Zs3za47wTcopSwbllsaVRTtxkJ6c7N5tmEbdhkckN4y6hkVkUPPviJ2fSqToRDqhSu5OH5y1JRN62YvLc5zJiCSgWDz_FjHrc2j5Mq9LRP10Zj69LPkdaugAEaqvHArZqH6adqr0xsoyS52FfCiuKnp5vmPF5DAu5fDCNroQCDFcBQTdR21SRiLQSymhPQ5TjW1vtXc2ITrbEXCNIxSnAWzb_YLGqvpopaPTrlSiz2cK8qxAdrZ_KwSwZiXoQ-5tHnxID9Y_yBnqN91dJ6Q845CNM2r7vFuaFGzOfpbwlVq07qDYG1JISzpjXUiM3EDh0j1DJjsqSjr1sXRG8F6WUMGFBfwHK70SA_vX1KE-J1gevF-9uI2LyVBIsjDvVUlarmo32BSteds8uBUZYZ5WJCZ-RaSTeOj2H1CHCCq6pEs7JhOZqOvF5G3AsHUHQIaU9KUr3hUbYqrheiFx7J9A1jh__SXopELG16GB581VQHdVGZertUFjQlpzzPHpC4qGe-AL_HzuH0W_7qnpYUxZDnK4tGJU9-oVQobYVpdxuHHHF1gp-3Dr=w3360-h1374-no?authuser=0" />
