--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@ Note that there is a lot of interest for this apartment so I will have to filter
   <li><strong>Kaution</strong>: 800€</li>
   <li><strong>Location</strong>: 12053 Berlin</li>
   <li><strong>Misc</strong>: 50-60€ extra for wifi, electricity, radio tax etc.</li>
-  <li><strong>Furniture</strong>: I will be selling some furniture and appliances (table, chair, wardrobe, fridge, washing machine, oven, stove, worktop, sink, lights, vaccum cleaner, mats and the shelves in the kitchen for 600€). The exercise bike, bean bag and arm chair can be included at a price of 150.</li>
+  <li><strong>Furniture</strong>: I will be selling some furniture and appliances (table, chair, wardrobe, fridge, washing machine, oven, stove, worktop, sink, lights, vaccum cleaner, mats and the shelves in the kitchen for 600€).</li>
+  <li><strong>Other things</strong>The exercise bike, bean bag and arm chair can be included at a price of 150€.</li>
   <li><strong>Area</strong>: 28sqm.</li>
   <li><strong>Anmeldung</strong>: Possible.</li>
   <li><strong>Transport</strong>: Exactly 5 minutes away from U8 Boddinstr and U7 Rathaus Neukolln. Rewe is almost next door.</li>
