--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Note that there is a lot of interest for this apartment so I will have to filter
   <li><strong>Location</strong>: 12053 Berlin</li>
   <li><strong>Misc</strong>: 50-60€ extra for wifi, electricity, radio tax etc.</li>
   <li><strong>Furniture</strong>: I will be selling some furniture and appliances (table, chair, wardrobe, fridge, washing machine, oven, stove, worktop, sink, lights, vaccum cleaner, mats and the shelves in the kitchen for 600€).</li>
-  <li><strong>Other things</strong>The exercise bike, bean bag and arm chair can be included at a price of 150€.</li>
+  <li><strong>Other things</strong>: The exercise bike, bean bag and arm chair can be included at a price of 150€.</li>
   <li><strong>Area</strong>: 28sqm.</li>
   <li><strong>Anmeldung</strong>: Possible.</li>
   <li><strong>Transport</strong>: Exactly 5 minutes away from U8 Boddinstr and U7 Rathaus Neukolln. Rewe is almost next door.</li>
@@ -55,7 +55,7 @@ Note that there is a lot of interest for this apartment so I will have to filter
   <li><strong>Note</strong>: Personal items in the picture are not included.</li>
 </ul>
 For more info, please DM me or write an email to <a href='mailto:sreeram.com@gmail.com'>sreeram.com@gmail.com</a> or message me in insta <a href='https://instagram.com/sreeramofficial'>@sreeramofficial</a>.
-
+<br /><br />
 <p><img src="https://lh3.googleusercontent.com/dVAeCgefI6hnereYMU0wLw4e_5uCqrqV1a06ME9Q7UfcyadTKiqf7hAK5ofA-XenzU-WJ4a6Tg6cymE_btRiYdwrv53H6ZIYIWbE3aMT_RHDJk3DKFZUo9PJFwS-ZDKjlkwBDCbsDSNvAtiYbFKSAJ4rWQuRaPnDTT00Zs3za47wTcopSwbllsaVRTtxkJ6c7N5tmEbdhkckN4y6hkVkUPPviJ2fSqToRDqhSu5OH5y1JRN62YvLc5zJiCSgWDz_FjHrc2j5Mq9LRP10Zj69LPkdaugAEaqvHArZqH6adqr0xsoyS52FfCiuKnp5vmPF5DAu5fDCNroQCDFcBQTdR21SRiLQSymhPQ5TjW1vtXc2ITrbEXCNIxSnAWzb_YLGqvpopaPTrlSiz2cK8qxAdrZ_KwSwZiXoQ-5tHnxID9Y_yBnqN91dJ6Q845CNM2r7vFuaFGzOfpbwlVq07qDYG1JISzpjXUiM3EDh0j1DJjsqSjr1sXRG8F6WUMGFBfwHK70SA_vX1KE-J1gevF-9uI2LyVBIsjDvVUlarmo32BSteds8uBUZYZ5WJCZ-RaSTeOj2H1CHCCq6pEs7JhOZqOvF5G3AsHUHQIaU9KUr3hUbYqrheiFx7J9A1jh__SXopELG16GB581VQHdVGZertUFjQlpzzPHpC4qGe-AL_HzuH0W_7qnpYUxZDnK4tGJU9-oVQobYVpdxuHHHF1gp-3Dr=w3360-h1374-no?authuser=0" />
 <img src="https://lh3.googleusercontent.com/4C4iB188OGY3-k4HJsK8xgu3gmmiVdQfUbzwArnnwbgITFP88-kHSF_WauPoMdokTX53NcATsohpC6r2cuk0Utombe_53gMLHP27LGqOU5_ze5OilNmUl23rE-abNBSwyBPy112V0OsBhzI7gYe43l0wJ7HXV4Xg4DnNsvb9ih947GMyoHk8qYs8WJJrJx3qA4KhfJvnuk0fF2NjiAkgZOiY4huA3QWHgcXoCDQ9U0CFj4s0UHw01JIPNnmcXKPREJYEvwZ8nYQkDiohtc1DWFclDv6uL9-agSCctodpxcgxY6iCgOCIXxi_olr_B2QsIGWl--7ptokjp18-G8_KJCx7ntH1uo9a26Ibifhx1mIYeAXt3OtXtIbZrgr1xfMvGmjlqlPOJM9twBa530BRKBjPZb7gRYyNiq9-1BXbUofJUPaV7vveMhCFC2uiZSO_Ay23NXn__OA5pMguuToXcuhNis1EQ67B9xaab1O6nIaqXRTvjAwrrltGWz82sfZPpVh6aXJzCTnS4AA1nvkl6DoblfwsQpKtbgkbKUQlARPzk7Jv-7OfCNGpVMZUM2GkmiBrGiB4SUic0L1YtjV65ulUg7F84tp4GXMj_F_DeOVYU7pCI4oe7iIMg_IFIEnGu7lWK_EOCDPkyOWqAZPuiBKhe9FOcZ1KW0QtbB2FyiGlAG9R4AqFr3ggQSsylIxlxs1JoeoO94Bb7rYJou2-Iox-=w3360-h1484-no?authuser=0" />
 <img src="https://scontent.ftxl2-1.fna.fbcdn.net/v/t1.6435-9/176896332_3987038794720984_1701908907262273633_n.jpg?_nc_cat=111&amp;ccb=1-3&amp;_nc_sid=b9115d&amp;_nc_ohc=I7XGfx4eDlwAX9Lfl8R&amp;_nc_ht=scontent.ftxl2-1.fna&amp;oh=b06957b9d25f50be60c8ed9f596fdc8c&amp;oe=60A79372" />
