--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <p>Hello people,
 I am moving out of Germany end of June. I am looking for someone to take over my rental contract of my unfurnished studio apartment.
-Note that there is a lot of interest for this apartment so I will have to filter applicants without proper documentation and you might need a covid test for the viewing. You can get the free Burger test at coronatest.de (Simple, result in 20 minutes)</p>
+Note that there is a lot of interest for this apartment so I will have to filter out applicants without proper documentation and you might need a same-day covid test for the viewing. You can get the free Burger test at <a href='https://coronatest.de/?lang=en'>https://coronatest.de/?lang=en<a> (Simple, result in 20 minutes)</p>
 <ul>
   <li><strong>Rent</strong>: 362€/month post mietendeckel</li>
   <li><strong>Kaution</strong>: 800€</li>
