--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
       
 
       <p>Hello people,
-I am moving out of Germany end of June. I am looking for someone to take over my rental contract of my unfurnished studio apartment.
-Note that there is a lot of interest for this apartment so I will have to filter out applicants without proper documentation and you might need a same-day covid test for the viewing. You can get the free Burger test at <a href='https://coronatest.de/?lang=en'>https://coronatest.de/?lang=en<a> (Simple, result in 20 minutes)</p>
+I am moving out of Germany end of June. I am looking for someone to take over my rental contract of my unfurnished apartment. Its a studio apartment with a living room, kitchen and bathroom. Its on the 2nd floor of the building.
+Viewings in progress. 
+        Note that there is a lot of interest for this apartment so I will have to filter out applicants without:</p> 
+        <ul>
+          <li>Proper documentation</li>
+          <li>Same-day covid test for the viewing. You can get the free Bürger test at <a href='https://coronatest.de/?lang=en'>https://coronatest.de<a> (Simple, result in 20 minutes, nearest place is Hermanplatz which is one stop away)
+        </ul>
 <ul>
   <li><strong>Rent</strong>: 362€/month post mietendeckel</li>
   <li><strong>Kaution</strong>: 800€</li>
