--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Viewings in progress.
           <li>Same-day covid test for the viewing. You can get the free Bürger test at <a href='https://coronatest.de/?lang=en'>https://coronatest.de<a> (Simple, result in 20 minutes, nearest place is Hermanplatz which is one stop away)
         </ul>
 <ul>
-  <li><strong>Rent</strong>: 362€/month post mietendeckel</li>
+  <li><strong>Rent</strong>: 362€/month post mietendeckel (was 290€ before the rule was scrapped)</li>
   <li><strong>Kaution</strong>: 800€</li>
   <li><strong>Location</strong>: 12053 Berlin</li>
   <li><strong>Misc</strong>: 50-60€ extra for wifi, electricity, radio tax etc.</li>
