--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Viewings in progress.
   <li><strong>Viewings</strong>: 26-31 April. Social distancing to be followed. Only one person can view at a time. Mask required, same day covid test required.</li>
   <li><strong>Note</strong>: Personal items in the picture are not included.</li>
 </ul>
-For more info, please DM me or write an email to <a href='mailto:sreeram.com@gmail.com'>sreeram.com@gmail.com</a> or message me in insta <a href='https://instagram.com/sreeramofficial'>@sreeramofficial</a>.
+            For more info, please write me on <a href='https://facebook.com/sreeram.io'>Facebook</>, <a href='https://instagram.com/sreeramofficial'>Instagram</a> or <a href='mailto:sreeram.com@gmail.com'>Email</a>.
 <br /><br />
 <p>
   <img src="https://github.com/sreeramofficial/rental/blob/main/2.jpg?raw=true" />
