--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@ Viewings in progress.
           <li>Proper documentation</li>
           <li>Same-day covid test for the viewing. You can get the free Bürger test at <a href='https://coronatest.de/?lang=en'>https://coronatest.de<a> (Simple, result in 20 minutes, nearest place is Hermanplatz which is one stop away)
         </ul>
+            
+            <h2>Details</h2>
 <ul>
   <li><strong>Rent</strong>: 362€/month post mietendeckel (was 290€ before the rule was scrapped)</li>
   <li><strong>Kaution</strong>: 800€</li>
