--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       
-      <h1><a href="https://sreeramofficial.github.io/rental/">Hallo Leute!</a></h1>
+      <h1><a href="https://sreeram.io/blog">Hallo Leute!</a></h1>
       
 
       <p>Hello people,
