--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
       
 
       <p>Hello people,
+        Entschuldigung, dass ich auf Englisch schreibe. Ich bin immer noch dabei, Deutsch zu lernen.
 I am moving out of Germany end of June. I am looking for someone to take over my rental contract of my unfurnished apartment. Its a studio apartment with a living room, kitchen and bathroom. Its on the 2nd floor of the building.
 Viewings in progress. 
-        Note that there is a lot of interest for this apartment so I will have to filter out applicants without:</p> 
+        Note that there is a lot of interest for this apartment so I will have to filter out applicants:</p> 
         <ul>
-          <li>Proper documentation</li>
-          <li>Same-day covid test for the viewing. You can get the free Bürger test at <a href='https://coronatest.de/?lang=en'>https://coronatest.de<a> (Simple, result in 20 minutes, nearest place is Hermanplatz which is one stop away)
+          <li>Without proper documentation</li>
+          <li>Without same-day covid test for the viewing. You can get the free Bürger test at <a href='https://coronatest.de/?lang=en'>https://coronatest.de<a> (Simple, result in 20 minutes, nearest place is Hermanplatz which is one stop away)</li>
         </ul>
             
             <h2>Details</h2>
