--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Viewings in progress.
   <li><strong>Transport</strong>: Exactly 5 minutes away from U8 Boddinstr and U7 Rathaus Neukolln. Rewe is almost next door.</li>
   <li><strong>Required documents</strong>: - Kopie von Personalausweis oder Reisepass, Kopie der letzten drei Gehaltsabrechnungen, eine aktuelle Schufa-Auskunft, eine Mietschuldenfreiheitsbescheinigung</li>
   <li><strong>Other details</strong>: Building was painted recently. There is parking in the backyard. Never had a problem from neighbours. I am giving this up only because I am moving out of the country.</li>
-  <li><strong>Viewings</strong>: 26-31 April. Social distancing to be followed. Only one person can view at a time. Mask required, same day covid test required.</li>
+  <li><strong>Viewings</strong>: 26-31 April. ONLINE PREFERRED. Social distancing to be followed. Only one person can view at a time. Mask required, same day covid test required.</li>
   <li><strong>Note</strong>: Personal items in the picture are not included.</li>
 </ul>
             For more info, please write me on <a href='https://facebook.com/sreeram.io'>Facebook</a> or <a href='https://instagram.com/sreeramofficial'>Instagram</a>.
