--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Viewings in progress.
         Note that there is a lot of interest for this apartment so I will have to filter out applicants:</p> 
         <ul>
           <li>Without proper documentation</li>
-          <li>Without same-day covid test for the viewing. You can get the free Bürger test at <a href='https://coronatest.de/?lang=en'>https://coronatest.de<a> (Simple, result in 20 minutes, nearest place is Hermanplatz which is one stop away)</li>
+          <li>Without same-day covid test if you want a physical viewing. You can get the free Bürger test at <a href='https://coronatest.de/?lang=en'>https://coronatest.de<a> (Simple, result in 20 minutes, nearest place is Hermanplatz which is one stop away)</li>
         </ul>
             
             <h2>Details</h2>
