--- a/index.html
+++ b/index.html
@@ -39,12 +39,7 @@
       <p>Hello people,
         Entschuldigung, dass ich auf Englisch schreibe. Ich bin immer noch dabei, Deutsch zu lernen.
 I am moving out of Germany end of June. I am looking for someone to take over my rental contract of my unfurnished apartment. Its a studio apartment with a living room, kitchen and bathroom. Its on the 2nd floor of the building.
-Viewings in progress. 
-        Note that there is a lot of interest for this apartment so I will have to filter out applicants:</p> 
-        <ul>
-          <li>Without proper documentation</li>
-          <li>Without same-day covid test if you want a physical viewing. You can get the free Bürger test at <a href='https://coronatest.de/?lang=en'>https://coronatest.de<a> (Simple, result in 20 minutes, nearest place is Hermanplatz which is one stop away)</li>
-        </ul>
+Viewings in progress. Note that there is a lot of interest for this apartment so I will have to filter out applicants without proper documentation. Also, the initial viewing will take place online. I will be sharing a hangout invite.</p> 
             
             <h2>Details</h2>
 <ul>
@@ -59,7 +54,7 @@ Viewings in progress.
   <li><strong>Transport</strong>: Exactly 5 minutes away from U8 Boddinstr and U7 Rathaus Neukolln. Rewe is almost next door.</li>
   <li><strong>Required documents</strong>: - Kopie von Personalausweis oder Reisepass, Kopie der letzten drei Gehaltsabrechnungen, eine aktuelle Schufa-Auskunft, eine Mietschuldenfreiheitsbescheinigung</li>
   <li><strong>Other details</strong>: Building was painted recently. There is parking in the backyard. Never had a problem from neighbours. I am giving this up only because I am moving out of the country.</li>
-  <li><strong>Viewings</strong>: 26-31 April. ONLINE PREFERRED. Social distancing to be followed. Only one person can view at a time. Mask required, same day covid test required.</li>
+  <li><strong>Viewings</strong>: 26-31 April. Will be online first.</li>
   <li><strong>Note</strong>: Personal items in the picture are not included.</li>
 </ul>
             For more info, please write me on <a href='https://facebook.com/sreeram.io'>Facebook</a> or <a href='https://instagram.com/sreeramofficial'>Instagram</a>.
