--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <p>Hello people,
         Entschuldigung, dass ich auf Englisch schreibe. Ich bin immer noch dabei, Deutsch zu lernen.<br />
 I am moving out of Germany end of June. I am looking for someone to take over my rental contract of my unfurnished apartment. Its a studio apartment with a living room, kitchen and bathroom. Its on the 2nd floor of the building.
-Note that there is a lot of interest for this apartment so I will have to filter out applicants without proper documentation. Also, the viewings will take place online. I will be sharing a hangout invite.</p> 
+Note that there is a lot of interest for this apartment so I will have to filter out applicants without proper documentation. Also, the viewings will take place online. I will be sharing a hangout invite. It will be a group meeting where I show the apartment. I dont know how else to do this honestly.</p> 
             
             <h2>Details</h2>
 <ul>
