--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Note that there is a lot of interest for this apartment so I will have to filter
   <li><strong>Viewings</strong>: 26-31 April. Will be online first.</li>
   <li><strong>Note</strong>: Personal items in the picture are not included.</li>
 </ul>
-            For more info, please write me on <a href='https://facebook.com/sreeram.io'>Facebook</a> or <a href='https://instagram.com/sreeramofficial'>Instagram</a>.
+For more info, please write me on <a href='https://facebook.com/sreeram.io'>Facebook</a> or <a href='https://instagram.com/sreeramofficial'>Instagram</a>.
 <br /><br />
 <p>
   <img src="https://github.com/sreeramofficial/rental/blob/main/2.jpg?raw=true" />
@@ -89,6 +89,21 @@ Note that there is a lot of interest for this apartment so I will have to filter
   </a>
 
 </p>
+
+      Cost price of everything I am selling:
+      <li>Lights: 30€</li>
+      <li>Washing machine: 150€</li>
+      <li>Exersize bike: 170€</li>
+      <li>Beanbag + Armchair: 90€</li>
+      <li>Bookshelf: 40€</li>
+      <li>Wardrobe, Table, Chair: 220€</li>
+      <li>Vaccum cleaner: 40€</li>
+      <li>Kitchen utentsils: 40€</li>
+      <li>Induction stove: 40€</li>
+      <li>Dustbins: 10€</li>
+      <li>Mats: 20€</li>
+      <li>Things I inherited from previous tenant: Kitchen worktop, bathroom installations, curtains, shelves, oven etc: 400€</li>
+      </ul>
       
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
