--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@ For more info, please write me on <a href='https://facebook.com/sreeram.io'>Face
 
 </p>
 
-      Cost price of everything I am selling:
+      <h2>Actual cost price of everything I am selling:</h2>
       <li>Lights: 30€</li>
       <li>Washing machine: 150€</li>
-      <li>Exersize bike: 170€</li>
+      <li>Exercize bike: 170€</li>
       <li>Beanbag + Armchair: 90€</li>
       <li>Bookshelf: 40€</li>
       <li>Wardrobe, Table, Chair: 220€</li>
