--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ For more info, please write me on <a href='https://facebook.com/sreeram.io'>Face
       <li>Exercize bike: 170€</li>
       <li>Beanbag + Armchair: 90€</li>
       <li>Bookshelf: 40€</li>
-      <li>Wardrobe, Table, Chair: 220€</li>
+      <li>Wardrobe, Table, Chair, stool: 220€</li>
       <li>Vaccum cleaner: 40€</li>
       <li>Kitchen utentsils: 40€</li>
       <li>Induction stove: 40€</li>
