--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@ For more info, please write me on <a href='https://facebook.com/sreeram.io'>Face
 </p>
 
       <h2>Actual cost price of everything I am selling:</h2>
-      <li>Lights: 30€</li>
-      <li>Washing machine: 150€</li>
-      <li>Exercize bike: 170€</li>
-      <li>Beanbag + Armchair: 90€</li>
-      <li>Bookshelf: 40€</li>
-      <li>Wardrobe, Table, Chair, stool: 220€</li>
-      <li>Vaccum cleaner: 40€</li>
-      <li>Kitchen utentsils: 40€</li>
-      <li>Induction stove: 40€</li>
-      <li>Dustbins: 10€</li>
-      <li>Mats: 20€</li>
+      <li>Lights (Lidl): 30€</li>
+      <li>Washing machine (Fb marketplace): 150€</li>
+      <li>Exercize bike (Amazon): 170€</li>
+      <li>Beanbag + Armchair (Amazon): 90€</li>
+      <li>Bookshelf (Amazon): 40€</li>
+      <li>Wardrobe, Table, Chair, stool (Ikea): 220€</li>
+      <li>Vaccum cleaner (Amazon): 40€</li>
+      <li>Kitchen utentsils (Amazon): 40€</li>
+      <li>Induction stove (Amazon): 40€</li>
+      <li>Dustbins (Amazon): 10€</li>
+      <li>Mats (Fb Marketplace): 20€</li>
       <li>Things I inherited from previous tenant: Kitchen worktop, bathroom installations, curtains, shelves, oven etc: 400€</li>
       </ul>
       
