--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ For more info, please write me on <a href='https://facebook.com/sreeram.io'>Face
       <li>Kitchen utentsils (Amazon): 40€</li>
       <li>Induction stove (Amazon): 40€</li>
       <li>Dustbins (Amazon): 10€</li>
-      <li>Mats (Fb Marketplace): 20€</li>
+      <li>Mats (Amazon, Fb Marketplace): 20€</li>
       <li>Things I inherited from previous tenant: Kitchen worktop, bathroom installations, curtains, shelves, oven etc: 400€</li>
       </ul>
       
