--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Note that there is a lot of interest for this apartment so I will have to filter
   <li><strong>Anmeldung</strong>: Possible.</li>
   <li><strong>Transport</strong>: Exactly 5 minutes away from U8 Boddinstr and U7 Rathaus Neukolln. Rewe is almost next door.</li>
   <li><strong>Required documents</strong>: - Kopie von Personalausweis oder Reisepass, Kopie der letzten drei Gehaltsabrechnungen, eine aktuelle Schufa-Auskunft, eine Mietschuldenfreiheitsbescheinigung</li>
-  <li><strong>Other details</strong>: Building was painted recently. There is parking in the backyard. Never had a problem from neighbours. I am giving this up only because I am moving out of the country.</li>
+  <li><strong>Other details</strong>: Copules, pets allowed. Building was painted recently. There is parking in the backyard. Never had a problem from neighbours. I am giving this up only because I am moving out of the country.</li>
   <li><strong>Viewings</strong>: 26-31 April. Will be online first.</li>
   <li><strong>Note</strong>: Personal items in the picture are not included.</li>
 </ul>
