--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@ Note that there is a lot of interest for this apartment so I will have to filter
   <li><strong>Transport</strong>: Exactly 5 minutes away from U8 Boddinstr and U7 Rathaus Neukolln. Rewe is almost next door.</li>
   <li><strong>Required documents</strong>: - Kopie von Personalausweis oder Reisepass, Kopie der letzten drei Gehaltsabrechnungen, eine aktuelle Schufa-Auskunft, eine Mietschuldenfreiheitsbescheinigung</li>
   <li><strong>Other details</strong>: Copules, pets allowed. Building was painted recently. There is parking in the backyard. Never had a problem from neighbours. I am giving this up only because I am moving out of the country.</li>
-  <li><strong>Viewings</strong>: 26-31 April. Will be online first.</li>
   <li><strong>Note</strong>: Personal items in the picture are not included.</li>
 </ul>
             <h2>Actual cost price of everything I am selling:</h2>
@@ -72,7 +71,9 @@ Note that there is a lot of interest for this apartment so I will have to filter
       <li>Mats (Amazon, Fb Marketplace): 20€</li>
       <li>Things I inherited from previous tenant: Kitchen worktop, bathroom installations, curtains, shelves, oven etc: 400€</li>
       </ul>
-For more info, please write me on <a href='https://facebook.com/sreeram.io'>Facebook</a> or <a href='https://instagram.com/sreeramofficial'>Instagram</a>.
+    
+    <h2>Viewing the apartment</h2>
+ Viewings will be held online from 26-31 April. Please write me on <a href='https://facebook.com/sreeram.io'>Facebook</a> or <a href='https://instagram.com/sreeramofficial'>Instagram</a>.
 <br /><br />
 <p>
   <img src="https://github.com/sreeramofficial/rental/blob/main/2.jpg?raw=true" />
