--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ Note that there is a lot of interest for this apartment so I will have to filter
   <li><strong>Other things</strong>: The exercise bike, bean bag and arm chair can be included at a price of 150€.</li>
   <li><strong>Area</strong>: 28sqm.</li>
   <li><strong>Anmeldung</strong>: Possible.</li>
-  <li><strong>Length of contract</strong>: Permanent, 1 year minimum</li>
+  <li><strong>Length of contract</strong>: Permanent, 1 year minimum.</li>
   <li><strong>Transport</strong>: Exactly 5 minutes away from U8 Boddinstr and U7 Rathaus Neukolln. Rewe is almost next door.</li>
   <li><strong>Required documents</strong>: - Kopie von Personalausweis oder Reisepass, Kopie der letzten drei Gehaltsabrechnungen, eine aktuelle Schufa-Auskunft, eine Mietschuldenfreiheitsbescheinigung</li>
-  <li><strong>Other details</strong>: Copules, pets allowed. Building was painted recently. There is parking in the backyard. Never had a problem from neighbours. I am giving this up only because I am moving out of the country.</li>
+  <li><strong>Other details</strong>: Couples, pets allowed. Building was painted recently. There is parking in the backyard. Never had a problem from neighbours. I am giving this up only because I am moving out of the country.</li>
   <li><strong>Note</strong>: Personal items in the picture are not included.</li>
 </ul>
             <h2>Actual cost price of everything I am selling:</h2>
