--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@ Note that there is a lot of interest for this apartment so I will have to filter
     <h2>Viewing the apartment</h2>
  Viewings will be held online from 26-31 April. Please write me on <a href='https://facebook.com/sreeram.io'>Facebook</a> or <a href='https://instagram.com/sreeramofficial'>Instagram</a>.
 <br /><br />
+    
+    <h2>Pictures</h2>
 <p>
   <img src="https://github.com/sreeramofficial/rental/blob/main/2.jpg?raw=true" />
 <img src="https://github.com/sreeramofficial/rental/blob/main/1.jpg?raw=true" />
@@ -84,7 +86,7 @@ Note that there is a lot of interest for this apartment so I will have to filter
 <img src="https://github.com/sreeramofficial/rental/blob/main/6.jpeg?raw=true" />
 <img src="https://github.com/sreeramofficial/rental/blob/main/7.jpeg?raw=true" />
 
-<p align="center">
+<!--<p align="center">
 <a target='_blank' href="https://facebook.com/sreeram.io">
     <img alt="Sreeram Padmanabhan" width="22px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/facebook.svg" />
   </a>
@@ -104,7 +106,7 @@ Note that there is a lot of interest for this apartment so I will have to filter
     <img alt="Sreeram Padmanabhan" width="22px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/twitter.svg" />
   </a>
 
-</p>
+</p>-->
 
 
       
