--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ gtag('config', 'G-TFZEWS6L7T');
 <h1><a href="https://sreer.am/blog">Hallo Leute!</a></h1>
 
 
-<p>Hello people,
+<p>Hallo leute,
 Entschuldigung, dass ich auf Englisch schreibe. Ich bin immer noch dabei, Deutsch zu lernen.<br />
-I am moving out of Germany end of June. I am looking for someone to take over my rental contract of my unfurnished apartment. Its a studio apartment with a living room, kitchen and bathroom. Its on the 2nd floor of the building.
+I am moving out of Germany to work in the UK. I am looking for someone to take over my rental contract of my unfurnished apartment. Its a studio apartment with a living room, kitchen and bathroom. Its on the 2nd floor of the building.
 Note that there is a lot of interest for this apartment so I will have to filter out applicants without proper documentation. Also, I expect the next person to take as much furniture from me as possible. </p> 
 
 <h2>Details</h2>
