--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@ If interested, please write me on <a href='https://facebook.com/sreeram.io'>Face
 <img src="https://github.com/sreeramofficial/rental/blob/main/5.jpeg?raw=true" />
 <img src="https://github.com/sreeramofficial/rental/blob/main/6.jpeg?raw=true" />
 <img src="https://github.com/sreeramofficial/rental/blob/main/7.jpeg?raw=true" />
+        <p align="center">Read next: <a href='/no-hola'>Use Hola VPN indefinitely</a></p><br/><br />
+
 <!--<p align="center">
   <a target='_blank' href="https://facebook.com/sreeram.io">
   <img alt="Sreeram Padmanabhan" width="22px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/facebook.svg" />
