--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ gtag('config', 'G-TFZEWS6L7T');
 <body>
 <div class="container-lg px-3 my-5 markdown-body">
 
-<h1><a href="https://sreeram.io/">Hallo Leute!</a></h1>
+<h1><a href="/">Hallo Leute!</a></h1>
 
 
 <p>Hallo leute,
